글쓰기 페이지 CSS 추가
글쓰기 페이지 CSS 디자인 추가

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -2,6 +2,7 @@
 @import "header.css";
 @import "footer.css";
 @import "main.css";
+@import "write.css";
 
 :root {
   --button-primary: rgb(254, 111, 15);
