--- a/frontend/css/write.css
+++ b/frontend/css/write.css
@@ -1,12 +1,13 @@
-form div {
-  margin-top: 5px;
-  margin-bottom: 10px;
-}
 input {
   width: 300px;
   height: 25px;
   border: 1px solid #eaeaea;
   border-radius: 5px;
+}
+
+form div {
+  margin-top: 5px;
+  margin-bottom: 10px;
 }
 
 #image {
@@ -27,4 +28,5 @@ input {
   border-radius: 5px;
   background-color: rgb(254, 111, 15);
   color: white;
+  cursor: pointer;
 }
